fix: Scroll issue resulted in layout "flickering"

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -33,8 +33,9 @@ body {
   @apply h-full min-h-full;
 }
 
-body {
+#main {
   overflow-y: auto !important;
+  scrollbar-gutter: stable;
 }
 
 *:focus-visible {
